org.padacore.core/antlr-generated/org/padacore/gnat/project/GPRParser.java
// $ANTLR 3.4 /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g 2012-10-02 23:02:07

package org.padacore.gnat.project;

import org.padacore.*;
import java.util.HashMap;
import java.util.ArrayList;
import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class GPRParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALL", "AT", "CASE", "DIGIT", "END", "END_OF_LINE", "EXTENDS", "EXTERNAL", "FOR", "IDENTIFIER", "IS", "LIMITED", "LOWER_CASE_LETTER", "NULL", "OTHERS", "PACKAGE", "PROJECT", "RENAMES", "STRING_ELEMENT", "STRING_LITERAL", "TYPE", "UPPER_CASE_LETTER", "USE", "WHEN", "WITH", "WS", "'('", "')'", "','", "'--'", "'.'", "':'", "':='", "';'", "'\\n'", "'\\r'"
    };

    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int ALL=4;
    public static final int AT=5;
    public static final int CASE=6;
    public static final int DIGIT=7;
    public static final int END=8;
    public static final int END_OF_LINE=9;
    public static final int EXTENDS=10;
    public static final int EXTERNAL=11;
    public static final int FOR=12;
    public static final int IDENTIFIER=13;
    public static final int IS=14;
    public static final int LIMITED=15;
    public static final int LOWER_CASE_LETTER=16;
    public static final int NULL=17;
    public static final int OTHERS=18;
    public static final int PACKAGE=19;
    public static final int PROJECT=20;
    public static final int RENAMES=21;
    public static final int STRING_ELEMENT=22;
    public static final int STRING_LITERAL=23;
    public static final int TYPE=24;
    public static final int UPPER_CASE_LETTER=25;
    public static final int USE=26;
    public static final int WHEN=27;
    public static final int WITH=28;
    public static final int WS=29;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GPRParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GPRParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return GPRParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g"; }


    private final static String EXECUTABLE_DIRECTORY_ATTRIBUTE = "Exec_Dir";
    private final static String OBJECT_DIRECTORY_ATTRIBUTE = "Object_Dir";
    private final static String MAIN_ATTRIBUTE = "Main";
    private final static String SOURCE_DIRECTORIES_ATTRIBUTE = "Source_Dirs";

    private GprProject project;
    private Map<String, ArrayList<String>> vars = new HashMap<String, ArrayList<String>>();
    private Map<String, ArrayList<String>> simpleAttributes = new HashMap<String, ArrayList<String>>();
    private ArrayList<String> withedProjects = new ArrayList<String>();

    public GprProject getGprProject() {
    	return this.project;
    }

    /**
     * Return True if variable whose name is given as a parameter is already defined.
     *
     */
    private boolean isVariableDefined(String variableName) {
    	return this.vars.containsKey(variableName);
    }

    /**
     * Adds the given String variable with its value in the symbols table.
     *
     */
    private void addNewStringVariable(String variableName, String value) {
    	ArrayList<String> values = new ArrayList(1);
    	values.add(value);
    	this.vars.put(variableName, values);
    }

    /**
     *
     * Adds the given simple attribute to the list of found attributes.
     */
    private void addNewSimpleAttribute(String attributeName,
    		ArrayList<String> attributeValue) {
    	this.simpleAttributes.put(attributeName, attributeValue);
    }

    /**
     * Returns True if the simple attribute whose name is given as a parameter is defined, False otherwise.
     *
     */
    private boolean isSimpleAttributeDefined(String attributeName) {
    	return this.simpleAttributes.containsKey(attributeName);
    }

    /**
     * Updates the GPR project according to the simple attributes read in GPR file.
     *
     */
    private void processSimpleAttributes() {
    	if (this.simpleAttributes.containsKey(EXECUTABLE_DIRECTORY_ATTRIBUTE)) {

    		List<String> execDirectories = this.simpleAttributes
    				.get(EXECUTABLE_DIRECTORY_ATTRIBUTE);
    		assert (execDirectories.size() == 1);

    		this.project.setExecutableDir(execDirectories.get(0));
    	}

    	if (this.simpleAttributes.containsKey(OBJECT_DIRECTORY_ATTRIBUTE)) {
    		List<String> objectDirectories = this.simpleAttributes
    				.get(OBJECT_DIRECTORY_ATTRIBUTE);
    		assert (objectDirectories.size() == 1);
    		this.project.setObjectDir(objectDirectories.get(0));
    	}

    	if (this.simpleAttributes.containsKey(MAIN_ATTRIBUTE)) {
    		List<String> executables = this.simpleAttributes.get(MAIN_ATTRIBUTE);
    		this.project.setExecutable(true);
    		for (String executable : executables) {
    			this.project.addExecutableName(executable);
    		}
    	}

    	if (this.simpleAttributes.containsKey(SOURCE_DIRECTORIES_ATTRIBUTE)) {
    		List<String> sourceDirs = this.simpleAttributes
    				.get(SOURCE_DIRECTORIES_ATTRIBUTE);

    		for (String sourceDir : sourceDirs) {
    			this.project.addSourceDir(sourceDir);
    		}
    	}
    }

    private void processWithedProjects() {
    	for (String withedProject : this.withedProjects) {
    		this.project.addWithedProject(withedProject);
    	}
    }



    // $ANTLR start "comment"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:243:1: comment : '--' (~ ( '\\n' | '\\r' ) )* ;
    public final void comment() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:244:3: ( '--' (~ ( '\\n' | '\\r' ) )* )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:245:3: '--' (~ ( '\\n' | '\\r' ) )*
            {
            match(input,33,FOLLOW_33_in_comment447); 

            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:246:3: (~ ( '\\n' | '\\r' ) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0 >= ALL && LA1_0 <= 37)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:
            	    {
            	    if ( (input.LA(1) >= ALL && input.LA(1) <= 37) ) {
            	        input.consume();
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "comment"


    public static class simple_name_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "simple_name"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:268:1: simple_name : IDENTIFIER ;
    public final GPRParser.simple_name_return simple_name() throws RecognitionException {
        GPRParser.simple_name_return retval = new GPRParser.simple_name_return();
        retval.start = input.LT(1);


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:269:3: ( IDENTIFIER )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:270:3: IDENTIFIER
            {
            match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_simple_name578); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "simple_name"


    public static class name_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "name"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:273:1: name : simple_name ( '.' simple_name )* ;
    public final GPRParser.name_return name() throws RecognitionException {
        GPRParser.name_return retval = new GPRParser.name_return();
        retval.start = input.LT(1);


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:274:3: ( simple_name ( '.' simple_name )* )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:275:3: simple_name ( '.' simple_name )*
            {
            pushFollow(FOLLOW_simple_name_in_name593);
            simple_name();

            state._fsp--;


            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:275:15: ( '.' simple_name )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==34) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:275:16: '.' simple_name
            	    {
            	    match(input,34,FOLLOW_34_in_name596); 

            	    pushFollow(FOLLOW_simple_name_in_name598);
            	    simple_name();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "name"



    // $ANTLR start "empty_declaration"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:278:1: empty_declaration : NULL ';' ;
    public final void empty_declaration() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:279:3: ( NULL ';' )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:280:3: NULL ';'
            {
            match(input,NULL,FOLLOW_NULL_in_empty_declaration615); 

            match(input,37,FOLLOW_37_in_empty_declaration617); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "empty_declaration"



    // $ANTLR start "variable_declaration"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:307:1: variable_declaration : var_name= simple_name ':=' var_value= expression ';' ;
    public final void variable_declaration() throws RecognitionException {
        GPRParser.simple_name_return var_name =null;

        GPRParser.expression_return var_value =null;


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:308:3: (var_name= simple_name ':=' var_value= expression ';' )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:309:3: var_name= simple_name ':=' var_value= expression ';'
            {
            pushFollow(FOLLOW_simple_name_in_variable_declaration730);
            var_name=simple_name();

            state._fsp--;


            match(input,36,FOLLOW_36_in_variable_declaration732); 

            pushFollow(FOLLOW_expression_in_variable_declaration736);
            var_value=expression();

            state._fsp--;


            match(input,37,FOLLOW_37_in_variable_declaration738); 


                                                                  this.addNewStringVariable((var_name!=null?input.toString(var_name.start,var_name.stop):null), (var_value!=null?input.toString(var_value.start,var_value.stop):null));
                                                                 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "variable_declaration"



    // $ANTLR start "typed_variable_declaration"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:315:1: typed_variable_declaration : var_name= simple_name ':' type= name ':=' var_value= string_expression ';' {...}?;
    public final void typed_variable_declaration() throws RecognitionException {
        GPRParser.simple_name_return var_name =null;

        GPRParser.name_return type =null;

        GPRParser.string_expression_return var_value =null;


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:316:3: (var_name= simple_name ':' type= name ':=' var_value= string_expression ';' {...}?)
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:317:3: var_name= simple_name ':' type= name ':=' var_value= string_expression ';' {...}?
            {
            pushFollow(FOLLOW_simple_name_in_typed_variable_declaration811);
            var_name=simple_name();

            state._fsp--;


            match(input,35,FOLLOW_35_in_typed_variable_declaration813); 

            pushFollow(FOLLOW_name_in_typed_variable_declaration817);
            type=name();

            state._fsp--;


            match(input,36,FOLLOW_36_in_typed_variable_declaration819); 

            pushFollow(FOLLOW_string_expression_in_typed_variable_declaration823);
            var_value=string_expression();

            state._fsp--;


            match(input,37,FOLLOW_37_in_typed_variable_declaration825); 

            if ( !((!this.isVariableDefined((var_name!=null?input.toString(var_name.start,var_name.stop):null)))) ) {
                throw new FailedPredicateException(input, "typed_variable_declaration", "!this.isVariableDefined($var_name.text)");
            }


                                                                                                                                  this.addNewStringVariable((var_name!=null?input.toString(var_name.start,var_name.stop):null), (var_value!=null?input.toString(var_value.start,var_value.stop):null));
                                                                                                                                 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "typed_variable_declaration"


    public static class string_expression_return extends ParserRuleReturnScope {
        public String result;
    };


    // $ANTLR start "string_expression"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:324:1: string_expression returns [String result] : ( STRING_LITERAL | name | external_value );
    public final GPRParser.string_expression_return string_expression() throws RecognitionException {
        GPRParser.string_expression_return retval = new GPRParser.string_expression_return();
        retval.start = input.LT(1);


        Token STRING_LITERAL1=null;

        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:325:3: ( STRING_LITERAL | name | external_value )
            int alt3=3;
            switch ( input.LA(1) ) {
            case STRING_LITERAL:
                {
                alt3=1;
                }
                break;
            case IDENTIFIER:
                {
                alt3=2;
                }
                break;
            case EXTERNAL:
            case 31:
            case 32:
            case 37:
                {
                alt3=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:326:3: STRING_LITERAL
                    {
                    STRING_LITERAL1=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_string_expression967); 


                                      retval.result = (STRING_LITERAL1!=null?STRING_LITERAL1.getText():null).replaceAll("\"", "");
                                     

                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:330:5: name
                    {
                    pushFollow(FOLLOW_name_in_string_expression994);
                    name();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:331:5: external_value
                    {
                    pushFollow(FOLLOW_external_value_in_string_expression1000);
                    external_value();

                    state._fsp--;


                    }
                    break;

            }
            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "string_expression"



    // $ANTLR start "string_list"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:334:1: string_list returns [ArrayList < String > result] : '(' expr1= string_expression ( ',' expr2= string_expression )* ')' ;
    public final ArrayList < String > string_list() throws RecognitionException {
        ArrayList < String > result = null;


        GPRParser.string_expression_return expr1 =null;

        GPRParser.string_expression_return expr2 =null;



        result = new ArrayList<String>();

        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:338:3: ( '(' expr1= string_expression ( ',' expr2= string_expression )* ')' )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:339:3: '(' expr1= string_expression ( ',' expr2= string_expression )* ')'
            {
            match(input,30,FOLLOW_30_in_string_list1025); 

            pushFollow(FOLLOW_string_expression_in_string_list1029);
            expr1=string_expression();

            state._fsp--;



                                           result.add((expr1!=null?expr1.result:null));
                                          

            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:343:3: ( ',' expr2= string_expression )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==32) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:343:4: ',' expr2= string_expression
            	    {
            	    match(input,32,FOLLOW_32_in_string_list1067); 

            	    pushFollow(FOLLOW_string_expression_in_string_list1071);
            	    expr2=string_expression();

            	    state._fsp--;



            	                                    result.add((expr2!=null?expr2.result:null));
            	                                   

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,31,FOLLOW_31_in_string_list1109); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "string_list"



    // $ANTLR start "term"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:349:1: term returns [ArrayList < String > result] : ( string_expression | string_list );
    public final ArrayList < String > term() throws RecognitionException {
        ArrayList < String > result = null;


        GPRParser.string_expression_return string_expression2 =null;

        ArrayList < String > string_list3 =null;


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:350:3: ( string_expression | string_list )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==EXTERNAL||LA5_0==IDENTIFIER||LA5_0==STRING_LITERAL||(LA5_0 >= 31 && LA5_0 <= 32)||LA5_0==37) ) {
                alt5=1;
            }
            else if ( (LA5_0==30) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }
            switch (alt5) {
                case 1 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:351:3: string_expression
                    {
                    pushFollow(FOLLOW_string_expression_in_term1129);
                    string_expression2=string_expression();

                    state._fsp--;



                                         result = new ArrayList<String>(1);
                                         result.add((string_expression2!=null?string_expression2.result:null));
                                        

                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:356:5: string_list
                    {
                    pushFollow(FOLLOW_string_list_in_term1158);
                    string_list3=string_list();

                    state._fsp--;



                                     result = string_list3;
                                    

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return result;
    }
    // $ANTLR end "term"


    public static class expression_return extends ParserRuleReturnScope {
        public ArrayList < String > result;
    };


    // $ANTLR start "expression"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:362:1: expression returns [ArrayList < String > result] : term ;
    public final GPRParser.expression_return expression() throws RecognitionException {
        GPRParser.expression_return retval = new GPRParser.expression_return();
        retval.start = input.LT(1);


        ArrayList < String > term4 =null;


        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:363:3: ( term )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:365:3: term
            {
            pushFollow(FOLLOW_term_in_expression1199);
            term4=term();

            state._fsp--;



                    retval.result = term4;
                   

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expression"



    // $ANTLR start "simple_declarative_item"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:371:1: simple_declarative_item : ( variable_declaration | typed_variable_declaration | attribute_declaration | empty_declaration );
    public final void simple_declarative_item() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:372:3: ( variable_declaration | typed_variable_declaration | attribute_declaration | empty_declaration )
            int alt6=4;
            switch ( input.LA(1) ) {
            case IDENTIFIER:
                {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==36) ) {
                    alt6=1;
                }
                else if ( (LA6_1==35) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;

                }
                }
                break;
            case FOR:
                {
                alt6=3;
                }
                break;
            case NULL:
                {
                alt6=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }

            switch (alt6) {
                case 1 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:373:3: variable_declaration
                    {
                    pushFollow(FOLLOW_variable_declaration_in_simple_declarative_item1224);
                    variable_declaration();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:374:5: typed_variable_declaration
                    {
                    pushFollow(FOLLOW_typed_variable_declaration_in_simple_declarative_item1230);
                    typed_variable_declaration();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:375:5: attribute_declaration
                    {
                    pushFollow(FOLLOW_attribute_declaration_in_simple_declarative_item1236);
                    attribute_declaration();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:376:5: empty_declaration
                    {
                    pushFollow(FOLLOW_empty_declaration_in_simple_declarative_item1242);
                    empty_declaration();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "simple_declarative_item"



    // $ANTLR start "attribute_declaration"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:379:1: attribute_declaration : ( indexed_attribute_declaration | simple_attribute_declaration );
    public final void attribute_declaration() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:380:3: ( indexed_attribute_declaration | simple_attribute_declaration )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==FOR) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==IDENTIFIER) ) {
                    int LA7_2 = input.LA(3);

                    if ( (LA7_2==30) ) {
                        alt7=1;
                    }
                    else if ( (LA7_2==USE) ) {
                        alt7=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 7, 2, input);

                        throw nvae;

                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:381:3: indexed_attribute_declaration
                    {
                    pushFollow(FOLLOW_indexed_attribute_declaration_in_attribute_declaration1258);
                    indexed_attribute_declaration();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:382:5: simple_attribute_declaration
                    {
                    pushFollow(FOLLOW_simple_attribute_declaration_in_attribute_declaration1264);
                    simple_attribute_declaration();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "attribute_declaration"



    // $ANTLR start "indexed_attribute_declaration"
    // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:385:1: indexed_attribute_declaration : FOR simple_name '(' STRING_LITERAL ')' USE expression ';' ;
    public final void indexed_attribute_declaration() throws RecognitionException {
        try {
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:386:3: ( FOR simple_name '(' STRING_LITERAL ')' USE expression ';' )
            // /Users/Charles/Documents/workspace/padacore/org.padacore.core/src/org/padacore/core/gnat/project/GPR.g:387:3: FOR simple_name '(' STRING_LITERAL ')' USE expression ';'
            {
            match(input,FOR,FOLLOW_FOR_in_indexed_attribute_declaration1279); 

            pushFollow(FOLLOW_simple_name_in_indexed_attribute_declaration1281);
            simple_name();

            state._fsp--;


            match(input,30,FOLLOW_30_in_indexed_attribute_declaration1283); 

            match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_indexed_attribute_declaration1285); 

            match(input,31,FOLLOW_31_in_indexed_attribute_declaration1287); 

            match(input,USE,FOLLOW_USE_in_indexed_attribute_declaration1289); 

            pushFollow(FOLLOW_expression_in_indexed_attribute_declaration1291);
            expression();

            state._fsp--;

